544 adding no residents text for home-edit screen. Adding Some CSS fixes in the UI. Add activity button should only be visible to admins. Resident feeling and activity can be added only by manager or admin

--- a/app/client/views/homes/group/group.css
+++ b/app/client/views/homes/group/group.css
@@ -1,4 +1,5 @@
 .clip-text {
+  padding: 6px;
   max-width: 30ch;
   white-space: nowrap;
   overflow: hidden;
